@@ -20,18 +20,6 @@ java {
 //    withSourcesJar()
 }
 
-tasks.withType<JavaCompile> {
-    // Needed by pattern matching on switches:
-//    options.compilerArgs.add("--enable-preview")
-}
-
-tasks.withType<Javadoc> {
-    // Needed by pattern matching on switches:
-//    val javadocOptions = options as CoreJavadocOptions
-//    javadocOptions.addStringOption("source", "21")
-//    javadocOptions.addBooleanOption("-enable-preview", true)
-}
-
 tasks {
     // to allow UTF-8 characters in comments
     compileJava { options.encoding = "UTF-8" }
@@ -45,8 +33,6 @@ dependencies {
 
 tasks.test {
     useJUnitPlatform()
-    // Needed by pattern matching on switches:
-//    jvmArgs("--enable-preview")
 }
 
 
